TEIIDSB-26: making the odata samples project test to run in its own vm so that there are no test run errors on travis (#51)